added sidebar plugin and deployed to web site

--- a/src/DryEraseWebsite/DryEraseWeb/index.html
+++ b/src/DryEraseWebsite/DryEraseWeb/index.html
@@ -17,7 +17,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>-->
-                    <a class="brand" href="#">DryEraseWeb<sup class="small">[Beta]</sup></a>
+                    <a class="brand" href="#"><img src="Content/images/Icon.png"/> DryEraseWeb<sup class="small">[Beta]</sup></a>
                     <ul class="nav">
                         <li ng-class="{active: routeIs('/how-it-works')}"><a href="#/how-it-works"> Overview</a></li>
                         <li ng-class="{active: routeIs('/who-we-are')}"><a href="#/who-we-are"> About Us</a></li>
