added brower action plugin

--- a/src/DryEraseWebsite/DryErasePlugin/popup.html
+++ b/src/DryEraseWebsite/DryErasePlugin/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Getting Started Extension's Popup</title>
+  <head ng-app="dryEraseWebPopup" ng-csp>
+    <title>DryEraseWeb</title>
     <style>
       body {
         min-width: 357px;
@@ -23,9 +23,12 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
+    <script src="js/lib/angular.js"></script>
+    <script src="js/lib/angular-ui.js"></script>
+    <script src="js/app/popup.js"></script>
   </head>
-  <body>
-  </body>
+    <body >
+            <h1>Hello World!!!!!!</h1>
+    </body>
 </html>
 
