--- a/src/DryEraseWebsite/DryEraseWeb/index.html
+++ b/src/DryEraseWebsite/DryEraseWeb/index.html
@@ -1,8 +1,8 @@
 ﻿<!doctype html>
-<html lang="en" ng-app="dryeraseweb">
+<html lang="en" >
     <head>
         <meta charset="utf-8">
-        <title>Dry Erase Web</title>
+        <title>DryEraseWeb</title>
         <link rel="stylesheet" href="Content/bootstrap.css">
         <link rel="stylesheet" href="Content/bootstrap-responsive.css">
 <!--        <link rel="stylesheet" href="Content/bootstrap-readable.css">-->
@@ -17,10 +17,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>-->
-                    <a class="brand" href="#"><img src="Content/images/Icon.png"/> DryEraseWeb<sup class="small">[Beta]</sup></a>
+                    <a class="brand" href="#">DryEraseWeb<sup class="small">[Beta]</sup></a>
                     <ul class="nav">
-                        <li ng-class="{active: routeIs('/how-it-works')}"><a href="#/how-it-works"> Overview</a></li>
-                        <li ng-class="{active: routeIs('/who-we-are')}"><a href="#/who-we-are"> About Us</a></li>
+                        <li ng-class="{active: routeIs('/overview')}"><a href="#/overview"> Overview</a></li>
+                        <li ng-class="{active: routeIs('/about')}"><a href="#/about"> About Us</a></li>
                     </ul>
                     <ul class="nav pull-right">
                         <li ng-class="{active: routeIs('/help')}"><a href="#/help"><i class="icon-info-sign"></i> Help</a></li>
