added rest services

--- a/src/DryEraseWebsite/DryEraseWeb/index.html
+++ b/src/DryEraseWebsite/DryEraseWeb/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en" >
+<html lang="en" ng-app="DryEraseApp" >
     <head>
         <meta charset="utf-8">
         <title>DryEraseWeb</title>
