fixed the damn bugs

--- a/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
@@ -11,6 +11,8 @@
         <script src="js/lib/jquery-ui-1.10.1.custom.js"> </script>
         <script src="js/lib/angular.js"> </script>
         <script src="js/lib/angular-ui.js"> </script>
+        <script src="js/lib/angular-resource.js"> </script>
+        <script src="js/lib/angular-cookies.js"> </script>
         <script src="js/app/popup.js"> </script>
         <script src="js/app/services.js"> </script>
 
