updated styling for popup

--- a/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
@@ -2,7 +2,11 @@
 <html ng-app="DryErasePlugin" ng-csp>
     <head  >
         <title>DryEraseWeb</title>
+        <link type="text/css" href="css/lib/bootstrap.min.css" rel="stylesheet"/>
+        <link type="text/css" href="css/lib/font-awesome.min.css" rel="stylesheet"/>
+<!--        <link type="text/css" href="css/lib/jquery.ui.all.css" rel="stylesheet"/>-->
         <link type="text/css" href="css/popup.css" rel="stylesheet"/>
+        
     </head>
     <body >
         <ng-view></ng-view>
