fixed for badge

--- a/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/popup.html
@@ -3,7 +3,9 @@
     <head  >
         <title>DryEraseWeb</title>
         <link type="text/css" href="css/lib/bootstrap.min.css" rel="stylesheet"/>
+        <link type="text/css" href="css/lib/bootstrap.min.css" rel="stylesheet"/>
         <link type="text/css" href="css/lib/font-awesome.min.css" rel="stylesheet"/>
+        <link type="text/css" href="css/lib/jquery.tagsinput.css" rel="stylesheet"/>
 <!--        <link type="text/css" href="css/lib/jquery.ui.all.css" rel="stylesheet"/>-->
         <link type="text/css" href="css/popup.css" rel="stylesheet"/>
         
@@ -17,6 +19,8 @@
         <script src="js/lib/angular-ui.js"> </script>
         <script src="js/lib/angular-resource.js"> </script>
         <script src="js/lib/angular-cookies.js"> </script>
+        <script src="js/lib/jquery.tagsinput.js"> </script>
+
         <script src="js/app/popup.js"> </script>
         <script src="js/app/services.js"> </script>
 
