--- a/src/DryEraseWebsite/DryEraseWeb/index.html
+++ b/src/DryEraseWebsite/DryEraseWeb/index.html
@@ -19,7 +19,7 @@
                     </a>-->
                     <a class="brand" href="#">DryEraseWeb<sup class="small">[Beta]</sup></a>
                     <ul class="nav">
-                        <li ng-class="{active: routeIs('/overview')}"><a href="#/overview"> Overview</a></li>
+<!--                        <li ng-class="{active: routeIs('/overview')}"><a href="#/overview"> Overview</a></li>-->
                         <li ng-class="{active: routeIs('/about')}"><a href="#/about"> About Us</a></li>
                     </ul>
                     <ul class="nav pull-right">
@@ -69,22 +69,36 @@
         <script src="app.js"> </script>
 
 
-       <!-- <script src="Scripts/services/localizedMessages.js"> </script>
-        <script src="Scripts/services/authentication/current-user.js"> </script>
-        <script src="Scripts/services/authentication/retry-queue.js"> </script>
-        <script src="Scripts/services/authentication/authentication.js"> </script>
-        <script src="Scripts/services/authentication/interceptor.js"> </script>
+        <!-- <script src="Scripts/services/localizedMessages.js"> </script>
+            <script src="Scripts/services/authentication/current-user.js"> </script>
+            <script src="Scripts/services/authentication/retry-queue.js"> </script>
+            <script src="Scripts/services/authentication/authentication.js"> </script>
+            <script src="Scripts/services/authentication/interceptor.js"> </script>
 
-        <script src="Scripts/directives/modal.js"> </script>
+            <script src="Scripts/directives/modal.js"> </script>
 
-        <script src="Scripts/controllers/NavbarController.js"> </script>
+            <script src="Scripts/controllers/NavbarController.js"> </script>
        
 
-        <script src="Scripts/login/login.js"> </script>
+            <script src="Scripts/login/login.js"> </script>
 
-        <script src="Scripts/services/Events.js"> </script>
-        <script src="Scripts/services/Persons.js"> </script>
-        <script src="Scripts/services/LoadingService.js"> </script>-->
+            <script src="Scripts/services/Events.js"> </script>
+            <script src="Scripts/services/Persons.js"> </script>
+            <script src="Scripts/services/LoadingService.js"> </script>-->
+        
+        <script type="text/javascript">
+
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-39060424-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function () {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+
+</script>
 
 
     </body>
